--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -10,7 +10,6 @@
     <TabBar>
         <ShellContent Title="Welcome" ContentTemplate="{DataTemplate local:MainPage}"/>
         <ShellContent Title="About" ContentTemplate="{DataTemplate local:AboutPage}"/>
-        <ShellContent Title="My Shopping Lists" ContentTemplate="{DataTemplate local:ListEntryPage}"
- />
+        <ShellContent Title="My Shopping Lists" ContentTemplate="{DataTemplate local:ListEntryPage}"/>
     </TabBar>
 </Shell>
