--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -25,6 +25,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <Button Grid.Column="1" Text="Delete Product" MaximumWidthRequest="200" Clicked="OnDeleteButtonItemClicked"></Button>
         <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
     </StackLayout>
 </ContentPage>
