--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -5,9 +5,7 @@
              Title="ProductPage">
     <ContentPage.Content>
         <StackLayout Margin="20">
-            <Editor Placeholder="Enter product name" Margin="20"
- Text="{Binding Description}"
- HeightRequest="50" />
+            <Editor Placeholder="Enter product name" Margin="20" Text="{Binding Description}" HeightRequest="50" />
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -18,22 +16,16 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button Text="Save Product" MaximumWidthRequest="200"
- Clicked="OnSaveButtonClicked" />
-                <Button Grid.Column="1"
- Text="Delete Product" MaximumWidthRequest="200"
- Clicked="OnDeleteButtonClicked"/>
-                <ListView Grid.Row="1" Grid.Column="0" x:Name="listView"
- Margin="20" IsRefreshing="True" >
+                <Button Text="Save Product" MaximumWidthRequest="200" Clicked="OnSaveButtonClicked" />
+                <Button Grid.Column="1" Text="Delete Product" MaximumWidthRequest="200" Clicked="OnDeleteButtonClicked"/>
+                <ListView Grid.Row="1" Grid.Column="0" x:Name="listView" Margin="20" IsRefreshing="True" >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <TextCell Text="{Binding Description}" />
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <Button Grid.Row="2" Grid.Column="0" Text="Add to Shop List"
-MaximumWidthRequest="200"
- Clicked="OnAddButtonClicked" />
+                <Button Grid.Row="2" Grid.Column="0" Text="Add to Shop List" MaximumWidthRequest="200" Clicked="OnAddButtonClicked" />
             </Grid>
         </StackLayout>
     </ContentPage.Content>
