--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -10,6 +10,7 @@
             <local:ValidationBehaviour />
         </Editor.Behaviors>
         </Editor>
+        <Picker x:Name="ShopPicker" Title="Enter Shop Name"/>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
